[package]
name = "newtonian-dynamics"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
nyx-space = "1.0.0-beta.1"
wasm-bindgen = "0.2.78"
getrandom = { version = "0.2", features = ["js"] }